@@ -21,3 +21,4 @@ depth: 1
  * Prevent audit log report from failing on missing models (Andy Chosak)
  * Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
  * Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
+ * Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
