@@ -21,3 +21,4 @@ depth: 1
  * Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
  * Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
  * Fix dialog component's message to have rounded corners at the top side (Sam)
+ * Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
