@@ -13,6 +13,7 @@ Changelog
  * Fix: Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
  * Fix: Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
  * Fix: Fix dialog component's message to have rounded corners at the top side (Sam)
+ * Fix: Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
 
 
 4.2 (06.02.2023)
@@ -176,6 +177,7 @@ Changelog
  * Fix: Prevent audit log report from failing on missing models (Andy Chosak)
  * Fix: Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
  * Fix: Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
+ * Fix: Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
 
 
 4.1.2 (06.02.2023)
